@@ -22,6 +22,12 @@ Features added
 Bugs fixed
 ----------
 
+* More ET compatible behaviour when writing out XML declarations or not
+
+* ``Element.attrib`` was missing ``clear()`` method
+
+* More robust error handling in ``iterparse()``
+
 * Documents lost their top-level PIs and comments on serialisation
 
 * lxml.sax failed on comments and PIs. Comments are now properly ignored and
